# segov-dev

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  README.md  bug-fixes-report.md  eslint.config.js  eslint.config.mjs  mcp-client-implementation-plan.md  package.json  pnpm-lock.yaml  tailwind.config.ts  turbo.json  vercel.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: _cloudrun_deploy.yaml  ci.yml  deploy-infra.yml  (+7 more)
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
backend/: .env.example  README.md  cloudrun.rendered.yaml  env.example  pyproject.toml  requirements.txt
backend/app/: agent.py  chains.py  cloudrun_auth.py  config.py  deps.py  main.py  mcp_client.py  mcp_tools.py  memory.py  rag_ingest.py  routes_chat.py  schemas.py
backend/app/prompts/: system_prompt.md
backend/tests/: __init__.py  test_cloudrun_auth.py  test_evaluation.py  test_routes_chat.py
components/: analytics.tsx  env-status.tsx  markdown-renderer.tsx  navbar.tsx  rich-text-renderer.tsx
data/: about.json  career.json  chatbot-prompt.json
docs/: auth.md  coreweave_llm_deployment.md  langchain_fast_api.md  mcp_gcp.md  monorepo.md
frontend/: .eslintrc.cjs  .prettierignore  AGENTS.md  eslint.config.js  eslint.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
hooks/: use-toast.ts
infra/: README.md  env.example  setup.sh
lib/: ama-agent.ts  ama-routing-refresh.ts  ama-routing-store.ts  ama-routing.ts  ama-session.ts  content.ts  contentful.ts
scripts/: get-github-secrets.sh  set-ama-routing.mjs
(+116 files in other folders)
